--- a/Bibliotheque_XML/nbproject/project.properties
+++ b/Bibliotheque_XML/nbproject/project.properties
@@ -1,5 +1,9 @@
+auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=false
+browser.run=true
 file.reference.Biblioth_que_XML-public_html=public_html
 file.reference.Biblioth_que_XML-test=test
+file.reference.Bibliotheque_XML-public_html=public_html
 files.encoding=UTF-8
-site.root.folder=${file.reference.Biblioth_que_XML-public_html}
-test.folder=${file.reference.Biblioth_que_XML-test}
+site.root.folder=${file.reference.Bibliotheque_XML-public_html}
+start.file=bibliotheque.xml
+web.context.root=/Bibliotheque_XML
